kustomize/overlays/devenv/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grapevine-api
  namespace: grapevine-services
spec:
  template:
    spec:
      containers:
        - name: grapevine-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grapevine-app
  namespace: grapevine-services
spec:
  template:
    spec:
      containers:
        - name: grapevine-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-gatekeeper
  namespace: grapevine-services
spec:
  template:
    spec:
      containers:
        - name: ingest-gatekeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steward
  namespace: grapevine-services
spec:
  template:
    spec:
      containers:
        - name: steward
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-worker
  namespace: grapevine-workers
spec:
  template:
    spec:
      containers:
        - name: ingest-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron-worker
  namespace: grapevine-workers
spec:
  template:
    spec:
      containers:
        - name: cron-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-worker
  namespace: grapevine-workers
spec:
  template:
    spec:
      containers:
        - name: index-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slackbot
  namespace: grapevine-workers
spec:
  template:
    spec:
      containers:
        - name: slackbot
