kustomize/overlays/devenv/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-worker
  namespace: grapevine-workers
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-worker
  namespace: grapevine-workers
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slackbot
  namespace: grapevine-workers
spec:
  replicas: 2
